--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "notedit <notedit@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "get-port": "^3.1.0",
+    "string-format": "^0.5.0"
   }
 }
